<resources>
    <string name="app_name">fundatecHeroes</string>
    <string name="email_error">Digite um email valido</string>
    <string name="login_error">Erro ao fazer login! Tente novamente mais tarde!!!</string>
    <string name="password_error">Digite uma senha valida</string>
    <string name="nomeHerois">Insira o nome do Heroi/Vilão</string>
    <string name="description">Insira a descrição do Heroi/Vilão</string>
    <string name="utlImagemHeroi">Insira a URL da imagem do Heroi/Vilão</string>
    <string name="app_idade">Idade</string>
    <string name="app_criar_personagem">Criar personagem</string>
    <string name="data">Data</string>
    <string name="Nome">Nome</string>
    <string name="Email">Email</string>
    <string name="Senha">Senha</string>
    <string name="Criar">Criar</string>
    <string name="Login">Login</string>
    <string name="Descricao">Descrição</string>
    <string name="novoporAqui">Novo por aqui?</string>
    <string name="nome_error">Digite seu nome</string>
    <string name="voltar">Voltar</string>
    <string name="sucessoRemover_personagem">Personagem Removido!</string>
    <string name="data_nascimento"> Data Nascimento: %1$s</string>
    <string-array name="characterTypes">
        <item>Selecione</item>
        <item>Heroi</item>
        <item>Vilão</item>
    </string-array>

    <string-array name="companies">
        <item>Selcione</item>
        <item>Marvel</item>
        <item>DC</item>
    </string-array>

</resources>

