<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corFundo"
    tools:context=".createCharacter.view.CharacterDetailsActivity">

    <ImageView
        android:id="@+id/iv_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/imagesheroi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/Nome"
        android:textSize="40dp"
        android:textColor="@color/corFundoPersonagem"
        app:layout_constraintTop_toBottomOf="@+id/iv_character"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/tv_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Descricao"
        android:textSize="35dp"
        android:textColor="@color/corBotao"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"/>


    <TextView
        android:id="@+id/tv_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:layout_marginTop="5dp"
        android:text="@string/app_idade"
        android:textColor="@color/corBotao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_descricao"/>

    <TextView
        android:id="@+id/tv_nascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="35dp"
        android:text="@string/data"
        android:textColor="@color/corBotao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_idade"/>


    <Button
        android:id="@+id/bt_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="350dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/corBotao"
        android:textColor="@color/white"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>