<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createCharacter.view.CreateCharacterActivity"
    android:background="@color/corFundo">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@+id/nameHeroVilao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/perfil" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameHeroVilao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        app:layout_constraintBottom_toTopOf="@+id/descriptiontext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/nameHero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/nomeHerois"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptiontext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameHeroVilao"
        app:layout_constraintBottom_toTopOf="@+id/url_img_hero"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/description"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/url_img_hero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptiontext"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/img_hero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/utlImagemHeroi"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textIdade"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="150dp"
        app:layout_constraintEnd_toEndOf="@id/url_img_hero"
        app:layout_constraintStart_toStartOf="@id/url_img_hero"
        app:layout_constraintTop_toBottomOf="@+id/url_img_hero">

        <EditText
            android:id="@+id/editText_idade"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:hint="@string/app_idade"
            android:imeOptions="actionNext"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etData"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/url_img_hero"
        app:layout_constraintStart_toEndOf="@+id/textIdade"
        app:layout_constraintTop_toBottomOf="@+id/url_img_hero">

    <EditText
        android:id="@+id/bt_data"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:hint="@string/data"
        android:imeOptions="actionNext"
        android:inputType="text"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <Spinner
        android:id="@+id/tipo_personagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textIdade"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="@id/textIdade"
        app:layout_constraintTop_toBottomOf="@id/textIdade" />

    <Spinner
        android:id="@+id/tipo_empresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="@id/url_img_hero"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@id/tipo_personagem"
        app:layout_constraintTop_toBottomOf="@id/etData" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/check"
        android:contentDescription="@string/app_criar_personagem"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/corBotao"

        />

</androidx.constraintlayout.widget.ConstraintLayout>